--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,11 @@
     <string name="change_finance_image">Change finance image</string>
     <string name="button_location">Set Location</string>
     <string name="title_activity_map">Map</string>
-    <string name="google_maps_key">INSERT YOUR KEY HERE</string>
+    <string name="google_maps_key">INSERT KEY HERE</string>
+    <string name="menu_deleteFinance">Delete</string>
+    <string name="title_activity_finance_maps">Map of All Finances </string>
+    <string name="finance_image_placeholder">Finance Imagee</string>
+    <string name="finance_title_placeholder">Finance Title</string>
+    <string name="finance_description_placeholder">Finance Description</string>
 </resources>
+
