--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,23 @@
 <resources>
-    <string name="app_name">Finance</string>
-    <string name="hint_financeTitle">Finance Title</string>
-    <string name="hint_financeDescription">Description </string>
-    <string name="button_addFinance">Add Finance</string>
+    <string name="app_name">Finance +</string>
+    <string name="hint_financeTitle">Purchase Title</string>
+    <string name="hint_financeDescription">Purchase Description </string>
+    <string name="button_addFinance">Add Purchase</string>
     <string name="menu_addFinance">Add</string>
     <string name="menu_cancelFinance">Cancel</string>
-    <string name="enter_finance_title"> Please enter a Finance Title </string>
-    <string name="save_finance"> Save Finance </string>
-    <string name="button_addImage"> Add Image </string>
-    <string name="select_finance_image">Select finance image</string>
-    <string name="change_finance_image">Change finance image</string>
-    <string name="button_location">Set Location</string>
+    <string name="enter_finance_title"> Please enter a Purchase Title </string>
+    <string name="save_finance"> Save Purchase </string>
+    <string name="button_addImage"> Add Receipt </string>
+    <string name="select_finance_image">Select Receipt</string>
+    <string name="change_finance_image">Change Receipt</string>
+    <string name="button_location">Set Purchase Location</string>
     <string name="title_activity_map">Map</string>
     <string name="google_maps_key">INSERT KEY HERE</string>
-    <string name="menu_deleteFinance">Delete </string>
-    <string name="title_activity_finance_maps">Map of All Finances </string>
-    <string name="finance_image_placeholder">Finance Image</string>
-    <string name="finance_title_placeholder">Finance Title</string>
-    <string name="finance_description_placeholder">Finance Description</string>
+    <string name="menu_deleteFinance">Delete</string>
+    <string name="title_activity_finance_maps">Map of All Purchases </string>
+    <string name="finance_image_placeholder">Purchase Image</string>
+    <string name="finance_title_placeholder">Purchase Title</string>
+    <string name="finance_description_placeholder">Purchase Description</string>
     <string name="title_activity_maps">Map</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
